@@ -4,6 +4,7 @@ Version 1.0.8, 01/01/2005
 	2. configuration average transitions for all other processes.
 	3. update CRM module for UTA model.
 	4. enable CI within the same non-relativisitc configuration for UTA.
+	5. fix a bug in GetNumElectrons introduced ealier in this version.
 	
 Version 1.0.7, 11/10/2004
 	1. add DR satellite energy to the DB_DR file.
